--- a/.gitignore
+++ b/.gitignore
@@ -43,6 +43,8 @@ Generated\ Files/
 # MSTest test Results
 [Tt]est[Rr]esult*/
 [Bb]uild[Ll]og.*
+*.dbmdl
+*.dbmdl.lock
 
 # NUnit
 *.VisualState.xml
