Add services; Update order WIP;

--- a/SharpAITest/SharpAITest.Application/SharpAITest.Application.csproj
+++ b/SharpAITest/SharpAITest.Application/SharpAITest.Application.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\SharpAITest.DataAccessLibrary\SharpAITest.DataAccessLibrary.csproj" />
+  </ItemGroup>
+
 </Project>
