--- a/SharpAITest/SharpAITest.API/SharpAITest.API.csproj
+++ b/SharpAITest/SharpAITest.API/SharpAITest.API.csproj
@@ -4,10 +4,19 @@
     <TargetFramework>net9.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <UserSecretsId>4168d124-3c27-4281-bb8f-a1a4ad2500dc</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Asp.Versioning.Mvc.ApiExplorer" Version="8.1.0" />
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.0" />
+    <PackageReference Include="Scalar.AspNetCore" Version="2.1.6" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\SharpAITest.Application\SharpAITest.Application.csproj" />
+    <ProjectReference Include="..\SharpAITest.Contracts\SharpAITest.Contracts.csproj" />
+    <ProjectReference Include="..\SharpAITest.Domain\SharpAITest.Domain.csproj" />
   </ItemGroup>
 
 </Project>
