--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -4,7 +4,7 @@ on:
     branches: [ main ]
 
 env:
-  AZURE_WEBAPP_NAME: your-app-name
+  AZURE_WEBAPP_NAME: SharpAITest-API
   DOTNET_VERSION: '9.x'
 
 jobs:
@@ -30,5 +30,5 @@ jobs:
       uses: azure/webapps-deploy@v2
       with:
         app-name: ${{ env.AZURE_WEBAPP_NAME }}
-        publish-profile: ${{ secrets.AZURE_PUBLISH_PROFILE }}
+        publish-profile: ${{ secrets.SHARP_AI_TEST_PUBLISH_PROFILE }}
         package: ./SharpAiTest.API/publish
