--- a/SharpAITest/SharpAITest.API/Properties/launchSettings.json
+++ b/SharpAITest/SharpAITest.API/Properties/launchSettings.json
@@ -14,6 +14,7 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
       "launchUrl": "scalar",
+      "launchBrowser": true,
       "dotnetRunMessages": true,
       "applicationUrl": "https://localhost:7182;http://localhost:5262"
     },
